# lab3_sem3

./: CMakeLists.txt
doc/: CMakeLists.txt
src/: CMakeLists.txt  interaction.cpp  interaction.h  main.cpp
src/BigInt/: BigInt.cpp  BigInt.h  BigInt_const_size.cpp  BigInt_const_size.h  CMakeLists.txt
test/: BI_const_size_tests.h  BI_tests.h  CMakeLists.txt  test_classes.h  test_main.cpp
